--- a/views/tarefas.ejs
+++ b/views/tarefas.ejs
@@ -125,7 +125,7 @@
 </head>
 <body>
   <header>
-    <h1>Minhas Tarefas</h1>
+    <h1>Minhas Tarefas Final</h1>
     <div class="logout">
       <a href="/logout">Sair</a>
     </div>
